customised tailwind styles, imported logo

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* to add custom styles to tailwind */
+@layer base {
+  body {
+    @apply bg-[#06202a] text-gray-300;
+  }
+}
